--- a/dotdotdot.conf
+++ b/dotdotdot.conf
@@ -1,3 +1,3 @@
 dots:
 - repo: git@github.com:akerl/dotfiles.git
-- repo: git@bitbucket.org:akerl/privdotfiles.git
+- repo: git@github.com:akerl/privdotfiles.git
