--- a/circle.yml
+++ b/circle.yml
@@ -8,5 +8,5 @@ test:
   override:
     - docker run -ti test /bin/true
     - docker run -ti test /bin/bash --version
-    - docker run -d 20:22 test ; sleep 5
-    - echo ' ' | netcat localhost 22
+    - docker run -d -p 20:22 test && sleep 5
+    - echo ' ' | netcat localhost 20
